[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
description = "A concurrent arena providing mutually exclusive access over guarded indexes"
documentation = "https://docs.rs/arena64"
license = "MIT"
name = "arena64"
repository = "https://github.com/Bajix/arena64"
readme = "./README.md"
version = "0.2.0"
edition = "2021"
rust-version = "1.84"

[workspace]
members = ["bench"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["extern_crate_alloc"]

# Enable extern crate alloc
extern_crate_alloc = ["once_cell"]

[dependencies]
once_cell = { version = "1.20", default-features = false, features = [
    "race",
    "alloc",
], optional = true }
