[package]
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
description = "A concurrent arena providing mutually exclusive access over indexes"
documentation = "https://docs.rs/arena64"
license = "MIT"
name = "arena64"
repository = "https://github.com/Bajix/arena64"
readme = "./README.md"
version = "0.6.0"
edition = "2021"
rust-version = "1.84"

[workspace]
members = ["bench"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crossbeam-utils = { version = "0.8" }
